[gd_scene load_steps=21 format=3 uid="uid://85qdx6m31pwx"]

[ext_resource type="Script" path="res://Enemies/StraightShooter/enemy_straight_shooter.gd" id="1_tbvd3"]
[ext_resource type="Texture2D" uid="uid://c4nmmoupjeo1d" path="res://Tilesheets/enemy_crawler-Sheet.png" id="3_5o41b"]
[ext_resource type="Script" path="res://Enemies/StraightShooter/animated_sprite_2d.gd" id="3_7a8sl"]
[ext_resource type="Script" path="res://Enemies/StraightShooter/gun.gd" id="4_8si8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_si0ge"]
size = Vector2(96, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qx56x"]
size = Vector2(96, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2svc"]
atlas = ExtResource("3_5o41b")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j12iv"]
atlas = ExtResource("3_5o41b")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef8k5"]
atlas = ExtResource("3_5o41b")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql41l"]
atlas = ExtResource("3_5o41b")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow0w5"]
atlas = ExtResource("3_5o41b")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw6re"]
atlas = ExtResource("3_5o41b")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j57v2"]
atlas = ExtResource("3_5o41b")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umhv3"]
atlas = ExtResource("3_5o41b")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1us"]
atlas = ExtResource("3_5o41b")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mjx2"]
atlas = ExtResource("3_5o41b")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqpr3"]
atlas = ExtResource("3_5o41b")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ckvn"]
atlas = ExtResource("3_5o41b")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rklnu"]
atlas = ExtResource("3_5o41b")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0ry3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2svc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j12iv")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef8k5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql41l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow0w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw6re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j57v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umhv3")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mjx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqpr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ckvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rklnu")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[node name="Enemy_Straight_Shooter" type="CharacterBody2D"]
script = ExtResource("1_tbvd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_si0ge")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qx56x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_h0ry3")
animation = &"shoot"
script = ExtResource("3_7a8sl")

[node name="Action_Timer" type="Timer" parent="."]
one_shot = true

[node name="Strafe_Timer" type="Timer" parent="."]
one_shot = true

[node name="Shoot_Timer" type="Timer" parent="."]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="."]
one_shot = true

[node name="Gun" type="Node2D" parent="."]
position = Vector2(0, -32)
script = ExtResource("4_8si8h")
